2009-03-06  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.

2009-03-05  Nick Clifton  <nickc@redhat.com>

	* objdump.c (disassemble_section): If the computed next offset is
	not beyond the current offset then just continue to the end.

2009-03-04  Tristan Gingold  <gingold@adacore.com>

	* MAINTAINERS: Add myself as VMS maintainer.

2009-03-03  Nick Clifton  <nickc@redhat.com>

	* readelf.c: Update formatting.

2009-03-03  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2009-03-03  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (disassemble_section): Mask address before sign extending.

2009-03-02  Sebastian Biallas  <sb@biallas.net>

	* ieee.c (parse_ieee_ty): Add support for undocumented 'v' type.
	(parse_ieee_bb): Set the filename if it has not already been
	discovered.

2009-03-02  Cary Coutant  <ccoutant@google.com>

	* readelf.c (adjust_relative_path): New function.
	(struct archive_info): New type.
	(setup_archive): New function.
	(release_archive): New function.
	(setup_nested_archive): New function.
	(get_archive_member_name): New function.
	(get_archive_member_name_at): New function.
	(make_qualified_name): New function.
	(process_archive): Factor out code for reading archive index and
	long filename table to setup_archive.  Add support for thin archives.

2009-03-02  Nick Clifton  <nickc@redhat.com>

	* po/sk.po: Updated Slovak translation.

2009-03-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.

2009-02-23  Cary Coutant <ccoutant@google.com>

	* objdump.c (load_specific_debug_section): New function, from
	load_debug_section.
	(load_debug_section): Use load_specific_debug_section.
	(dump_dwarf_section): Likewise.

2009-02-23  Cary Coutant <ccoutant@google.com>

	* readelf.c (parse_args): Select all sections explicitly for -w.

2009-02-09  Kai Tietz  <kai.tietz@onevision.com>

	* windres.c (set_endianess): Copy name without leading '-'.
