@@ -1,3 +1,9 @@
+2009-03-09  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/9933
+	* objcopy.c (filter_symbols): Properly handle common symbols
+	in relocatable file.
+
 2009-03-06  Nick Clifton  <nickc@redhat.com>
 
 	* po/es.po: Updated Spanish translation.
